--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "profile-readme-generator",
-  "version": "1.0.0",
-  "description": "???? Best Profile Github Readme Creator/Generator ???? ",
+  "version": "1.0.1",
+  "description": "🔥🔥 Best Profile Github Readme Creator/Generator 🔥🔥 ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
