--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "profile-readme-generator",
   "version": "1.0.1",
   "description": "🔥🔥 Best Profile Github Readme Creator/Generator 🔥🔥 ",
-  "main": "index.js",
+  "bin": {
+    "readme": "index.js"
+  },  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -28,5 +30,11 @@
     "axios": "^0.19.2",
     "inquirer": "^7.1.0",
     "util": "^0.12.3"
+  },
+    "engines": {
+    "npm": ">=5.5.0",
+    "node": ">=9.3.0"
   }
+}
+
 }
