--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "profile-readme-generator",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "🔥🔥 Best Profile Github Readme Creator/Generator 🔥🔥 ",
-  "bin": {
-    "readme": "index.js"
-  },
+  "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
