--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "profile-readme-generator",
+  "name": "@CodeWhiteWeb/profile-readme-generator",
   "version": "1.0.8",
   "description": "🔥🔥 Best Profile Github Readme Creator/Generator 🔥🔥 ",
   "bin": "index.js",
@@ -32,5 +32,8 @@
   "engines": {
     "npm": ">=5.5.0",
     "node": ">=9.3.0"
-  }
+  },
+  "publishConfig": {
+  "registry": "https://npm.pkg.github.com/"
+}
 }
